data/derived/comb/progs/unify/prog4746.ml.out
Characters 61-64:
  wwhile(f, f b);;
            ^^^
Error: This expression has type 'a * bool
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a * bool
